fix(global.css): update body font size to improve readability

--- a/styles/stylesheet/global.css
+++ b/styles/stylesheet/global.css
@@ -17,7 +17,7 @@ body {
   background-repeat: repeat;
   background-position: center;
   background-size: cover;
-  font-size: var(--fs-200);
+  font-size: var(--fs-300);
   font-family: 'BlenderPro', sans-serif;
   color: var(--clr-text-main);
 }
